# mo2-install-toolkit

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  THIRD_PARTY_NOTICES.md  install.ps1  pyproject.toml  uninstall.ps1
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: release.yml
claude/skills/mo2-mod-installer/: SKILL.md
config/: config.example.toml
scripts/: build-bundle.ps1  build.ps1  entrypoint.py  install-adapters.ps1  package-release.ps1  test-adapters.ps1  test-oneclick-installer.ps1  uninstall-adapters.ps1
sidecars/npc-agent-patcher/: NpcAgentPatcher.csproj  Program.cs  README.md
skills/mo2-mod-installer/: SKILL.md  runtime-manifest.json
skills/mo2-mod-installer/agents/: openai.yaml
skills/mo2-mod-installer/references/: agent-contract.md  tool-usage.md
skills/mo2-mod-installer/scripts/: ensure-runtime.ps1
src/mo2_agent_toolkit/: auth.py  auth_gui.py  cli.py  metadata.py  nexus.py  npc.py  workflow.py
src/mo2_agent_toolkit/_vendor/: __init__.py
src/mo2_agent_toolkit/_vendor/pyfomod/: installer.py  parser.py
src/mo2_agent_toolkit/legacy/: archive-select-install.py  mo2-profile-audit.py  mo2-profile-update.py  mod-install.py  nexus-deps-resolve.py  nexus-download.py  nexus-mod-info.py
tests/: bootstrap_integration.py  test_archive_layout.py  test_auth.py  test_bundle.py  test_cli.py  test_configuration_contract.py  test_metadata.py  test_nexus.py  test_nexus_download_legacy.py  test_npc.py  test_profile_states.py  test_workflow.py
