[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mo2-agent-toolkit"
version = "0.10.1"
description = "Agent-neutral, safety-first Mod Organizer 2 toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{name = "MO2 Agent Toolkit contributors"}]
dependencies = []

[project.scripts]
mo2-tool = "mo2_agent_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mo2_agent_toolkit = ["legacy/*.py", "_vendor/pyfomod/LICENSE"]
